added origin conversion

--- a/cars.ipynb
+++ b/cars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "845b09e6",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "2e7151d9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "id": "dd08fbaa",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "(392, 9)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "a8a79015",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "4       1                ford torino  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "8bca25b1",
    "metadata": {},
    "outputs": [],
@@ -208,15 +208,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dad8e3fb",
+   "id": "b34a38c6",
    "metadata": {},
    "source": [
-    "Odrzucenie zbędnej kolumny dotyczącej spalania w milach na galon"
+    "Konwertowanie kraju pochodzenia w postaci liczbowej na bardziej intuicyjną wartość tekstową"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
+   "id": "bd44c906",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "origin_map = {\n",
+    "    1: 'USA',\n",
+    "    2: 'Europe',\n",
+    "    3: 'Japan'\n",
+    "}\n",
+    "\n",
+    "df['origin'] = df['origin'].map(origin_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dad8e3fb",
+   "metadata": {},
+   "source": [
+    "Odrzucenie zbędnej kolumny dotyczącej spalania w milach na galon oraz kraju pochodzenia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "4d366e8c",
    "metadata": {},
    "outputs": [],
@@ -234,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "fd0d9eca",
    "metadata": {},
    "outputs": [],
@@ -252,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "id": "c3dd510b",
    "metadata": {},
    "outputs": [
@@ -298,7 +322,7 @@
        "      <td>3504</td>\n",
        "      <td>12.0</td>\n",
        "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
        "      <td>chevrolet chevelle malibu</td>\n",
        "      <td>13.07</td>\n",
        "      <td>chevrolet</td>\n",
@@ -311,7 +335,7 @@
        "      <td>3693</td>\n",
        "      <td>11.5</td>\n",
        "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
        "      <td>buick skylark 320</td>\n",
        "      <td>15.68</td>\n",
        "      <td>buick</td>\n",
@@ -324,7 +348,7 @@
        "      <td>3436</td>\n",
        "      <td>11.0</td>\n",
        "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
        "      <td>plymouth satellite</td>\n",
        "      <td>13.07</td>\n",
        "      <td>plymouth</td>\n",
@@ -337,7 +361,7 @@
        "      <td>3433</td>\n",
        "      <td>12.0</td>\n",
        "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
        "      <td>amc rebel sst</td>\n",
        "      <td>14.70</td>\n",
        "      <td>amc</td>\n",
@@ -350,7 +374,7 @@
        "      <td>3449</td>\n",
        "      <td>10.5</td>\n",
        "      <td>70</td>\n",
-       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
        "      <td>ford torino</td>\n",
        "      <td>13.84</td>\n",
        "      <td>ford</td>\n",
@@ -360,12 +384,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   cylinders  displacement  horsepower  weight  acceleration  year  origin  \\\n",
-       "0          8           5.0         130    3504          12.0    70       1   \n",
-       "1          8           5.7         165    3693          11.5    70       1   \n",
-       "2          8           5.2         150    3436          11.0    70       1   \n",
-       "3          8           5.0         150    3433          12.0    70       1   \n",
-       "4          8           4.9         140    3449          10.5    70       1   \n",
+       "   cylinders  displacement  horsepower  weight  acceleration  year origin  \\\n",
+       "0          8           5.0         130    3504          12.0    70    USA   \n",
+       "1          8           5.7         165    3693          11.5    70    USA   \n",
+       "2          8           5.2         150    3436          11.0    70    USA   \n",
+       "3          8           5.0         150    3433          12.0    70    USA   \n",
+       "4          8           4.9         140    3449          10.5    70    USA   \n",
        "\n",
        "                        name  l/100km      brand  \n",
        "0  chevrolet chevelle malibu    13.07  chevrolet  \n",
@@ -375,7 +399,7 @@
        "4                ford torino    13.84       ford  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "id": "4ce31b0e",
    "metadata": {},
    "outputs": [
@@ -434,7 +458,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "4f91b2ff",
    "metadata": {},
    "outputs": [],
@@ -481,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "id": "9d56c94d",
    "metadata": {},
    "outputs": [
@@ -516,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "id": "7770b51a",
    "metadata": {},
    "outputs": [
@@ -535,11 +559,11 @@
       " 3   weight        392 non-null    int64  \n",
       " 4   acceleration  392 non-null    float64\n",
       " 5   year          392 non-null    int64  \n",
-      " 6   origin        392 non-null    int64  \n",
+      " 6   origin        392 non-null    object \n",
       " 7   name          392 non-null    object \n",
       " 8   l/100km       392 non-null    float64\n",
       " 9   brand         392 non-null    object \n",
-      "dtypes: float64(3), int64(5), object(2)\n",
+      "dtypes: float64(3), int64(4), object(3)\n",
       "memory usage: 30.8+ KB\n"
      ]
     }
@@ -550,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "id": "5796d723",
    "metadata": {},
    "outputs": [
@@ -570,7 +594,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "id": "18d55262",
    "metadata": {},
    "outputs": [
@@ -599,7 +623,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "id": "ddc80520",
    "metadata": {},
    "outputs": [
@@ -649,14 +673,12 @@
        "      <th>weight</th>\n",
        "      <th>acceleration</th>\n",
        "      <th>year</th>\n",
-       "      <th>origin</th>\n",
        "      <th>l/100km</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>392.000000</td>\n",
        "      <td>392.000000</td>\n",
        "      <td>392.000000</td>\n",
        "      <td>392.000000</td>\n",
@@ -673,7 +695,6 @@
        "      <td>2977.584184</td>\n",
        "      <td>15.541327</td>\n",
        "      <td>75.979592</td>\n",
-       "      <td>1.576531</td>\n",
        "      <td>11.248418</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -684,7 +705,6 @@
        "      <td>849.402560</td>\n",
        "      <td>2.758864</td>\n",
        "      <td>3.683737</td>\n",
-       "      <td>0.805518</td>\n",
        "      <td>3.913358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -695,7 +715,6 @@
        "      <td>1613.000000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>70.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>5.050000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -706,7 +725,6 @@
        "      <td>2225.250000</td>\n",
        "      <td>13.775000</td>\n",
        "      <td>73.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>8.110000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -717,7 +735,6 @@
        "      <td>2803.500000</td>\n",
        "      <td>15.500000</td>\n",
        "      <td>76.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>10.340000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -728,7 +745,6 @@
        "      <td>3614.750000</td>\n",
        "      <td>17.025000</td>\n",
        "      <td>79.000000</td>\n",
-       "      <td>2.000000</td>\n",
        "      <td>13.840000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -739,7 +755,6 @@
        "      <td>5140.000000</td>\n",
        "      <td>24.800000</td>\n",
        "      <td>82.000000</td>\n",
-       "      <td>3.000000</td>\n",
        "      <td>26.140000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -757,18 +772,18 @@
        "75%      8.000000      4.525000  126.000000  3614.750000     17.025000   \n",
        "max      8.000000      7.500000  230.000000  5140.000000     24.800000   \n",
        "\n",
-       "             year      origin     l/100km  \n",
-       "count  392.000000  392.000000  392.000000  \n",
-       "mean    75.979592    1.576531   11.248418  \n",
-       "std      3.683737    0.805518    3.913358  \n",
-       "min     70.000000    1.000000    5.050000  \n",
-       "25%     73.000000    1.000000    8.110000  \n",
-       "50%     76.000000    1.000000   10.340000  \n",
-       "75%     79.000000    2.000000   13.840000  \n",
-       "max     82.000000    3.000000   26.140000  "
+       "             year     l/100km  \n",
+       "count  392.000000  392.000000  \n",
+       "mean    75.979592   11.248418  \n",
+       "std      3.683737    3.913358  \n",
+       "min     70.000000    5.050000  \n",
+       "25%     73.000000    8.110000  \n",
+       "50%     76.000000   10.340000  \n",
+       "75%     79.000000   13.840000  \n",
+       "max     82.000000   26.140000  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "id": "0450e961",
    "metadata": {},
    "outputs": [
