tiny markdown formatting fix

--- a/cars.ipynb
+++ b/cars.ipynb
@@ -1298,13 +1298,18 @@
    "id": "64cebccc",
    "metadata": {},
    "source": [
-    "TODO: sprawdzić fizycznie uzasadnione synergie między cechami\n",
+    "TODO: sprawdzić fizycznie uzasadnione synergie między cechami np.\n",
     "\n",
-    "weight * acceleration\n",
-    "cylinders * displacement\n",
-    "weight * displacement\n",
-    "acceleration * year\n",
-    "origin * displacement"
+    "\n",
+    "- weight * acceleration\n",
+    "\n",
+    "- cylinders * displacement\n",
+    "\n",
+    "- weight * displacement\n",
+    "\n",
+    "- acceleration * year\n",
+    "\n",
+    "- origin * displacement"
    ]
   },
   {
